--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shooter Portfolio</title>
+    <title>Photographer Portfolio Template</title>
     <link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
 
     <!-- ICONS -->
@@ -34,6 +34,7 @@
     </section>
 
     <!-- IMAGE GALLERY HTML -->
+     <h2 class="h2">IMAGE GALLERY</h2>
     <section class="portfolio__gallery">
         <div class="image__div">
             <img src="./imgs/portfolio_gallery/image1.jpg">
