--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- ABOUT ME HTML -->
      <section class="about">
-        <h2>About me</h2>
+        <h2 class="h2">About me</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic explicabo maiores earum iure sint, maxime consequuntur, nobis autem laborum in asperiores modi doloremque ex id aut necessitatibus dicta sed sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolore blanditiis sequi sapiente voluptatum exercitationem placeat iusto molestiae a magni.</p>
      </section>
 
